Various bits of polish, timer scripts (see notes)
Completed several smaller tasks for Straight Shootin':
-created an event based timer script for other timer scripts to inherit from, with an interface for gameobjects to use to subscribe to the timer's events
-updated playeraim and targetspawner to use the event-based timer
-added some lines for arrow charging sound effect
-updated the charge indicator with drawn images
-added some models for the targets and arrows, made Models folder
-added animator controller for the players, and idle, charge and fire states

TODO:
-replace the placeholder charging sound
-need to create level itself
-add more "oomph" to the targets breaking

--- a/Assets/Scripts/ShootingRange/ShootingRange.asmdef
+++ b/Assets/Scripts/ShootingRange/ShootingRange.asmdef
@@ -2,7 +2,8 @@
     "name": "ShootingRange",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:418498b9774d63c4a9593a063bb5c808"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
